# IntensiveReading

./: .gitignore  AGENTS.md  LICENSE  README.md  database.py  main.py  migrate_db_to_files.py  models.py  opencode.json  pyproject.toml  storage.py
backend/: config.py  main.py
backend/routers/: __init__.py  _helpers.py  documents.py  knowledge.py  layers.py  scrape.py
backend/schemas/: __init__.py  documents.py  knowledge.py  layers.py  scrape.py  tokens.py
backend/storage/: __init__.py  base.py  documents.py  files.py  knowledge.py  layers.py  migrations.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: HomePage.tsx  OriginFileCanvas.tsx  ReaderPage.tsx  ReferentEditor.tsx  SummaryCanvas.tsx  TextCanvas.tsx  TokenActionPanel.tsx  TokenPopover.tsx  TokenSpan.tsx  TokenSplitModal.tsx  Toolbar.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
routers/: documents.py
services/: ai.py  file_parser.py  scraper.py  tokenizer.py
tests/: test_file_parser.py  test_schemas.py  test_storage_base.py  test_storage_documents.py  test_storage_files.py  test_storage_knowledge.py  test_storage_layers.py  test_tokenizer.py
